aws/eks/blog-app/07-blog-app-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: blog-app
  namespace: blog-app

spec:
  replicas: 1
  selector:
    matchLabels:
        app: blog-app

  template:
    metadata:

      labels:
        app: blog-app
    spec:
      containers:
        - name: blog-app
          image: batchlcwd/blog-app:2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:

            requests:
              memory: "256Mi"
              cpu: "250m"

            limits:
              memory: "512Mi"
              cpu: "500m"


          readinessProbe:

            httpGet:
              path: /actuator/health
              port: 8080

            initialDelaySeconds: 20
            periodSeconds: 10


          livenessProbe:

            httpGet:
              path: /actuator/health
              port: 8080

            initialDelaySeconds: 40
            periodSeconds: 20
