aws/eks/blog-app/05-mysql-service.yml
apiVersion: v1
kind: Service

metadata:
  name: mysql-service
  namespace: blog-app

spec:
  clusterIP: None

  selector:
    app: mysql

  ports:
    - name: mysql
      port: 3306
      targetPort: 3306

      # mysql-0.mysql-service
      # mysql-1.mysql-service
