aws/eks/blog-app/09-blog-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blog-app
  annotations:
    # AWS Load Balancer Controller annotations for EKS
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'    
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:524954473877:certificate/4ccf00c5-f49b-4845-9276-432e1d5707d4
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    # Optional: If using NGINX Ingress Controller instead of ALB, uncomment below:
    # kubernetes.io/ingress.class: "nginx"
spec:
  # Ingress class: 'alb' for AWS Application Load Balancer Controller, or 'nginx' for NGINX Ingress Controller
  ingressClassName: alb
  rules:
    # Optional: specify a custom domain name:
    # - host: nginx.example.com
    #   http:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-app-service
                port:
                  number: 80
